简化jdk21、25镜像名字